# swift-evolution-updates

./: .gitmodules  main.py  prompt.txt  pyproject.toml  repository.py
.devcontainer/: Dockerfile  devcontainer.json
docs/2025/: 20250211.md
